--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,21 @@
         <h2>{{ .Message }}</h2>
     {{ end }}
 
-    <a href="/next">Next Page</a>
-    
+    <a href="/next" class="button">Next Page</a>
+
+    <style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #4CAF50;
+            border: none;
+            text-decoration: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
+
 </body>
 </html>
